# -APEX-FACTORY-v6.0

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURAL_BLUEPRINT_V6.md  README.md  pyproject.toml  pytest.ini  requirements.txt
apex_core/: __init__.py
apex_core/auth/: __init__.py  router.py  session_store.py  user_store.py
apex_core/brains_v6/: __init__.py  b1_intent_ingestor.py  b2_component_scout.py  b3_design_critic.py  b4_composition_synthesizer.py  b6_commander.py  b7_runtime_forge.py  brain_base_v6.py
apex_core/customer/: __init__.py  cdp.py  cvp.py  saint_protocol.py
apex_core/db/: __init__.py  botthongminh_schema.py
apex_core/deliberation_v6/: __init__.py  quality_gate.py  radar_4d.py  ui_critics.py
apex_core/emitters/: __init__.py  ast_backbone.py  preview_sandbox.py  react_emitter.py  tailwind_stylist.py  vue_emitter.py
apex_core/evolution_v6/: __init__.py  ast_surgeon_v6.py  error_ledger_v6.py  hot_inject.py
apex_core/factories/: __init__.py  deploy_adapter.py  image_factory.py  mobile_factory.py  video_factory.py  web_factory.py
apex_core/foundation/: __init__.py  composition_rules.py  contracts.py  domain_types.py  ontology_media.py  ontology_ui.py  principles_v6.py  project_snapshot.py  ui_ir.py
apex_core/governance/: __init__.py  decision_brain.py  round_table.py
apex_core/legacy/: __init__.py
apex_core/orchestrator_v6/: __init__.py  _hookup.py  apex_factory.py  c2_hub_router.py  notifications.py  orders_router.py  recovery_router.py  studio_entry.py  twofa_router.py
apex_core/probes/: __init__.py  cross_ai_probe.py  reverse_code_probe.py  silence_probe.py
apex_core/routers/: botthongminh_router.py
apex_core/subagent/: __init__.py  student.py
apex_core/ui_v6/: __init__.py  (+1 more)
public_site/: customer-chat.html  portal.html
reports/: CONSTRUCTION_LOG.md  IDEA_INTERLOCK_MATRIX.md  SCREW_LOG.md
scripts/: auto_setup.sh  lint_no_self_reference.py  project_status.py
tests/: __init__.py  test_foundation.py  test_orchestrator.py  test_studio_entry.py
(+18 files in other folders)
