[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-factory"
version = "0.1.0"
description = "Runnable APEX Factory v6 scaffold materialized from the architectural blueprint."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
serve = ["fastapi", "uvicorn"]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["apex_core*"]
