[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-factory"
version = "6.0.0"
description = "APEX Factory v6.0 - Multi-platform production factory"
requires-python = ">=3.10"
license = {text = "Proprietary"}
dependencies = []

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-generativeai>=0.4.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
]
image = [
    "Pillow>=10.0.0",
]
all = [
    "apex-factory[llm,server,image]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
]

[project.scripts]
apex-studio = "apex_core.orchestrator_v6.studio_entry:main"

[tool.setuptools.packages.find]
include = ["apex_core*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
