[project]
name = "apex-factory"
version = "6.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["apex_core", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
